updated for puppet4

--- a/environment.conf
+++ b/environment.conf
@@ -1,3 +1,5 @@
+# Reference:
+# https://docs.puppet.com/puppet/4.6/reference/config_file_environment.html
 modulepath          = modules:$basemodulepath
-config_version      = '/usr/bin/git --git-dir $confdir/environments/$environment/.git rev-parse HEAD'
+config_version      = '/usr/bin/git --git-dir $codedir/environments/$environment/.git rev-parse HEAD'
 environment_timeout = 3m
