clean up hiera key
using profiles::rsyslog::remote_servers instead of profiles::rsyslog['remote_servers']

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,11 +1,10 @@
 ---
-profiles::rsyslog:
-  remote_servers:
-    - host: "logm-pci-us.%{::domain}"
-      port: "514"
-      pattern: "*.*"
-      protocol: "tcp"
-    - host: "logm-pci-kr.%{::domain}"
-      port: "514"
-      pattern: "*.*"
-      protocol: "tcp"
+profiles::rsyslog::remote_servers:
+  - host: "logm-pci-us.%{::domain}"
+    port: "514"
+    pattern: "*.*"
+    protocol: "tcp"
+  - host: "logm-pci-kr.%{::domain}"
+    port: "514"
+    pattern: "*.*"
+    protocol: "tcp"
