adds profiles::ntp related data

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -8,3 +8,13 @@ profiles::rsyslog::remote_servers:
     port: "514"
     pattern: "*.*"
     protocol: "tcp"
+profiles::ntp::servers:
+  - 'ntp1.us.cdngp.net'
+  - 'ntp2.us.cdngp.net'
+  - 'ntp1.kr.cdngp.net'
+  - 'ntp2.kr.cdngp.net'
+profiles::ntp::restrict:
+  - 'default kod nomodify notrap nopeer noquery'
+  - '-6 default kod nomodify notrap nopeer noquery'
+  - '127.0.0.1'
+  - '-6 ::1'
