--- a/hiera.yaml
+++ b/hiera.yaml
@@ -7,6 +7,7 @@
 :json:
   :datadir: "/etc/puppetlabs/code/environments/%{environment}/hieradata" 
 :hierarchy:
+  - "hostgroups/%{::hostgroup}"
   - "nodes/%{::trusted.certname}"
   - "virtual/%{::virtual}"
   - "%{application_tier}"
