--- a/hiera.yaml
+++ b/hiera.yaml
@@ -3,10 +3,11 @@
   - yaml
   - json
 :yaml:
-  :datadir: "/etc/puppetlabs/code/environments/%{environment}/hieradata"
+  :datadir: "/etc/puppetlabs/code/environments/%{::environment}/hieradata"
 :json:
-  :datadir: "/etc/puppetlabs/code/environments/%{environment}/hieradata" 
+  :datadir: "/etc/puppetlabs/code/environments/%{::environment}/hieradata" 
 :hierarchy:
+  - "locations/%{::location}"
   - "hostgroups/%{::hostgroup}"
   - "nodes/%{::trusted.certname}"
   - "virtual/%{::virtual}"
