--- a/hieradata/hostgroups/ntp_servers.yaml
+++ b/hieradata/hostgroups/ntp_servers.yaml
@@ -1,5 +1,5 @@
 ---
-profiles::ntp::servers: &id001
+profiles::ntp::servers:
   - 64.90.182.55
   - 208.66.175.36
   - time-nw.nist.gov
@@ -15,4 +15,3 @@ profiles::ntp::restrict:
   - '-6 default kod nomodify notrap nopeer noquery'
   - '127.0.0.1'
   - '-6 ::1'
-  - *id001
