--- a/hiera.yaml
+++ b/hiera.yaml
@@ -1,12 +1,10 @@
 ---
 :backends:
   - yaml
-  - json
 :yaml:
   :datadir: "/etc/puppetlabs/code/environments/%{environment}/hieradata"
-:json:
-  :datadir: "/etc/puppetlabs/code/environments/%{environment}/hieradata" 
 :hierarchy:
+  - "hostgroups/%{::hostgroup}"
   - "nodes/%{::trusted.certname}"
   - "virtual/%{::virtual}"
   - "%{application_tier}"
