--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -28,8 +28,8 @@ profiles::snmp::sys_location: Unknown
 profiles::snmp::sys_services: 72
 profiles::snmp::sys_name: %{::fqdn}
 profiles::snmp::snmpv3_user:
-  name: pmv3nS12
-  authtype: SHA
-  authpass: nuyHooW32
-  privtype: AES
-  privpass: ngpsmn1k
+  - name: pmv3nS12
+   authtype: SHA
+   authpass: nuyHooW32
+   privtype: AES
+   privpass: ngpsmn1k
