--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -22,15 +22,9 @@ profiles::ntp::restrict:
   - '-6 ::1'
   - *id001
 #Profiles::SNMP
-profiles::snmp:
-  #ro_community: use eyaml
-  sys_contact: 'infra-sys@cdnetworks.com'
-  sys_location: 'Unknown'
-  sys_services: 72
-  sys_name: "%{::fqdn}"
-  snmpv3_user:
-    #name: use secure eyaml
-    authtype: 'SHA'
-    #authpass:  use secure eyaml
-    privtype: 'AES'
-    #privpass: use secure eyaml
+#profiles::snmp::ro_community: use secure eyaml
+profiles::snmp::sys_contact: 'infra-sys@cdnetworks.com'
+profiles::snmp::sys_location: 'Unknown'
+profiles::snmp::sys_services: 72
+profiles::snmp::sys_name: "%{::fqdn}"
+#profiles::snmp::snmpv3_user: use secure.eyaml
