--- a/hieradata/hostgroups/kss.yaml
+++ b/hieradata/hostgroups/kss.yaml
@@ -3,3 +3,10 @@ ssh::server_options:
   PrintLastLog: 'no'
   Match Group ssh_key:
     AllowAgentForwarding: no
+profiles::base::login_defs::options:
+  # If you change these you must update the KSS Doc.
+  # - Title: KSS User Documentation
+  PASS_MAX_DAYS   : 60
+  PASS_MIN_DAYS   : 0
+  PASS_MIN_LEN    : 8
+  PASS_WARN_AGE   : 7
