--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -15,6 +15,17 @@ profiles::base::login_defs::options:
   PASS_MIN_DAYS: 0
   PASS_MIN_LEN: 8
   PASS_WARN_AGE: 60
+profiles::base::services:
+  - name: logxfer-debug
+   protocol: tcp
+   port: 2103
+   #aliases: undef
+   comment: CDNET Logxfer Debug
+  - name: config-debug
+   protocol: tcp
+   port: 2105
+   #aliases: undef
+   comment: CDNET Config Debug
 #Profiles::RSYSLOG
 #profiles::rsyslog::rate_limit_interval:
 profiles::rsyslog::mainmsg_queue_timeout_enqueue: 0
