--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -28,6 +28,19 @@ profiles::base::services:
     comment: CDNET Config Debug
 profiles::base::securetty:
   - console
+limits::entries:
+  20-nproc:
+    user: *
+    limit_type: nproc
+    both: 20000
+  30-core:
+    user: *
+    limit_type: core
+    both: unlimited
+  40-nofile:
+    user: *
+    limit_type: nofile
+    both: 16000
 #Profiles::RSYSLOG
 #profiles::rsyslog::rate_limit_interval:
 profiles::rsyslog::mainmsg_queue_timeout_enqueue: 0
