--- a/hieradata/virtual/virtualbox.yaml
+++ b/hieradata/virtual/virtualbox.yaml
@@ -1,3 +1,6 @@
 ---
-pam::login_pam_access: 'absent'
-pam::sshd_pam_access: 'absent'
+#pam::login_pam_access: 'absent'
+#pam::sshd_pam_access: 'absent'
+pam::allowed_users:
+  'vagrant':
+    - tty1
