--- a/hieradata/virtual/virtualbox.yaml
+++ b/hieradata/virtual/virtualbox.yaml
@@ -1,4 +1,4 @@
 ---
 #pam::login_pam_access: 'absent'
 #pam::sshd_pam_access: 'absent'
-pam::allowed_users: vagrant
+profiles::base::pam::allowed_users: vagrant
