--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -79,6 +79,9 @@ profiles::snmp::sys_location: Unknown
 profiles::snmp::sys_services: 72
 profiles::snmp::sys_name: "%{::fqdn}"
 #profiles::snmp::snmpv3_user: use secure.eyaml
+profiles::base::aliases::aliases:
+  'root':
+    recipient: '/dev/null'
 ssh::storeconfigs_enables: false
 ssh::server_options:
     Protocol: 2
